# bevy_wry

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/actions/install-linux-deps/: action.yml
.github/workflows/: ci.yml  rust.yml
examples/: anchors.rs  fullscreen.rs  simple.rs
examples/leptos/: leptos-ui.rs
examples/leptos-csr/: leptos-ui.rs
examples/leptos-csr/ui/: Cargo.toml
examples/leptos-ssr/: Cargo.toml  README.md
examples/leptos-ssr/src/: app.rs  main.rs
examples/leptos/ui/src/: main.rs
examples/web/: ui.html
src/: communication.rs  error.rs  lib.rs  types.rs  websocket.rs  webview.rs
src/communication/: bincode.rs  error.rs  mod.rs  types.rs
src/communication/ui/: mod.rs
src/components/: bounds.rs  mod.rs  webview.rs
src/events/: mod.rs  system.rs
src/systems/: events.rs  mod.rs  webview.rs
