[package]
name = "bevy_wry"
version = "0.1.6"
edition = "2021"
categories = ["bevy-plugin", "gui"]
description = "A tauri-apps/wry integration with Bevy engine"
keywords = ["bevy", "wry", "bevy_wry"]
license = "MIT"
authors = ["Pawel Bis"]
repository = "https://github.com/PawelBis/bevy_wry"

[dependencies]
wry = { version = "0.36", features = ["transparent", "devtools"] }
bevy = { version = "0.13", default_features = false, features = ["bevy_winit"] }
winit = "0.29"
thiserror = "1.0"
tungstenite = "0.21"
serde = { version = "1.0", default_features = false }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["bincode", "serde_json", "bevy/bevy_core_pipeline", "bevy/bevy_render", "bevy/bevy_sprite"]

[features]
bincode = ["dep:bincode"]
serde_json = ["dep:serde_json"] 
