[package]
name = "bevy_wry"
version = "0.1.6"
edition = "2021"
categories = ["bevy-plugin", "gui"]
description = "A tauri-apps/wry integration with Bevy engine"
keywords = ["bevy", "wry", "bevy_wry"]
license = "MIT"
authors = ["Pawel Bis"]
repository = "https://github.com/PawelBis/bevy_wry"

[dependencies]
wry = { version = "0.41", features = ["transparent", "devtools"] }
bevy = { version = "0.13", default-features = false, features = ["bevy_winit"] }
winit = "0.29"
thiserror = "1.0"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0" }

[[example]]
name = "simple"
path = "examples/simple.rs"

[features]
simple-example = ["bevy/bevy_core_pipeline", "bevy/bevy_render", "bevy/bevy_sprite"]

[patch.crates-io]
# At the moment http disallows empty authority and invalidates uris like: "file:///path/to/file"
http = { git = "https://github.com/PawelBis/http", branch = "feature/empty-authority" }
