[package]
name = "bevy_wry"
version = "0.1.10"
edition = "2021"
categories = ["game-development"]
description = "A tauri-apps/wry integration with Bevy engine"
keywords = ["bevy", "wry", "bevy_wry", "plugin"]
license = "MIT"
authors = ["Pawel Bis"]
repository = "https://github.com/PawelBis/bevy_wry"

[dependencies]
wry = { version = "0.48.1", features = ["transparent", "devtools"] }
bevy = { version = "0.15", default-features = false, features = ["bevy_winit"] }
winit = { version = "0.30", features = ["rwh_06"] }
thiserror = "1.0"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0" }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.18" }
x11-dl = "2.21.0"

[dev-dependencies]
bevy = { version = "0.15", default-features = true }

[[example]]
name = "fullscreen"
path = "examples/fullscreen.rs"

[[example]]
name = "leptos"
path = "examples/leptos/leptos-ui.rs"

[patch.crates-io]
# At the moment http disallows empty authority and invalidates uris like: "file:///path/to/file"
http = { git = "https://github.com/PawelBis/http", branch = "feature/empty-authority" }
